fin de formation  _ ajout des supports

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-VITE_JSON_SERVER_URL=http://localhost:3001
-VITE_ENV=production
+VITE_SHARE_ENV_DATA=Variable_partagée_entre_tous_les_environnements
